# protos

./: README.md  pyproject.toml  setup.cfg  setup.py
protos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
protos/ai_service/: ai_service.proto  ai_service_pb2.py  ai_service_pb2.pyi  ai_service_pb2_grpc.py  client.py  dto.py
protos/notification_service/: __init__.py  client.py  dto.py  notification_service.proto  notification_service_pb2.py  notification_service_pb2.pyi  notification_service_pb2_grpc.py
protos/user_service/: __init__.py  client.py  dto.py  user_service.proto  user_service_pb2.py  user_service_pb2.pyi  user_service_pb2_grpc.py
