[project]
name = "protos"
version = "0.1.0"
description = "grpc contracts for lawly"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "betterproto==1.2.5",
    "grpcio==1.64.0",
    "grpcio-tools==1.64.0",
    "mypy-protobuf==3.6.0",
    "protobuf==5.27.0",
    "pydantic==2.9.2",
]
