[project]
name = "protos"
version = "0.1.5"
description = "grpc contracts for lawly"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "betterproto==1.2.5",
    "grpcio==1.71.0",
    "grpcio-tools==1.71.0",
    "mypy-protobuf==3.6.0",
    "protobuf==5.29.0",
    "pydantic==2.9.2",
]
