[metadata]
description_file = README.md

[flake8]
ignore = E203, E266 , E501 , W503, F811
max-line-length = 79
max-complexity = 18
select = B , C, E , F , W , T4, B9
extend-exclude = .tox,.git,.yml,.yaml,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,.venv

[pycodestyle]
max-line-length = 79
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[mypy]
python_version = 3.11
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
